--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
 #  my-app:
-#    image: 401727325713.dkr.ecr.us-east-2.amazonaws.com/my-app:1.0
+#    image: {AWS-REPOSITORY}
 #    ports:
 #      - 3000:3000
   mongodb:
